--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+#pixel-grid {
+  image-rendering: pixelated;
+}
